--- a/css/slider.css
+++ b/css/slider.css
@@ -2,6 +2,7 @@
     margin-left: auto;
     margin-right: auto; 
     max-width: 50%;
+    position: relative; 
 }
 
 .slider-button {
@@ -32,4 +33,7 @@
 
 .display-right {
     right: 0%;
+}
+body {
+    background-color: black; 
 }
