--- a/css/slider.css
+++ b/css/slider.css
@@ -43,18 +43,18 @@ ul {
    list-style-type: none; 
     margin: 0;
     padding: 0;
-    background-color: white; 
+    background-color: rgb(204, 204, 255); 
 }
 
 li a {
     display: block; 
-    color: rgb(176, 255, 169);
+    color: black;
     padding: 8px 16px; 
     text-decoration: none; 
 }
 
 li a:hover {
-    background-color: grey;
+    background-color: white;
     color: rgb(204, 204, 255); 
 }
     
