--- a/css/slider.css
+++ b/css/slider.css
@@ -73,7 +73,7 @@ li a:hover {
 }
 
 .icon-bar a:hover {
-  background-color: #000; /* Add a hover color */
+  background-color: white; /* Add a hover color */
 }
 
 .active {
