--- a/css/slider.css
+++ b/css/slider.css
@@ -59,23 +59,26 @@ li a:hover {
 }
 
 .icon-bar {
-  width: 90px; /* Set a specific width */
-  background-color: rgb(204, 204, 255); /* Dark-grey background */
+  width: 100%; /* Full-width */
+  background-color: #555; /* Dark-grey background */
+  overflow: auto; /* Overflow due to float */
 }
 
 .icon-bar a {
-  display: block; /* Make the links appear below each other instead of side-by-side */
+  float: left; /* Float links side by side */
   text-align: center; /* Center-align text */
-  padding: 16px; /* Add some padding */
+  width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
+  padding: 12px 0; /* Some top and bottom padding */
   transition: all 0.3s ease; /* Add transition for hover effects */
   color: white; /* White text color */
-  font-size: 36px; /* Increased font-size */
+  font-size: 36px; /* Increased font size */
 }
 
 .icon-bar a:hover {
-  background-color: white; /* Add a hover color */
+  background-color: rgb(204, 204, 255); /* Add a hover color */
 }
 
 .active {
   background-color: rgb(204, 204, 255); /* Add an active/current color */
 }
+
